Fix bug: secondary-nav visible behind header on page scroll
- Switched margin-top to padding-top on main, so that the space behind the header is covered with the white background of main, when the page scrolls.
- Sometimes the header would not close the gap fast enough, and the secondary-nav would be seen behind the space allocated for the header at the top of the page.

--- a/css/application.css
+++ b/css/application.css
@@ -522,18 +522,18 @@ body {
 main {
   background-color: #fff;
   transition: transform 0.4s ease-in-out;
-  margin-top: 10.1875rem;
+  padding-top: 10.1875rem;
   position: relative;
   z-index: 10;
 }
 @media (min-width: 768px) {
   main {
-    margin-top: 6.75rem;
+    padding-top: 6.75rem;
   }
 }
 @media (min-width: 992px) {
   main {
-    margin-top: 13.5rem;
+    padding-top: 13.5rem;
   }
 }
 
